appchooserprivate: Resolve history to names

The history ends up being used for filtering which expects
the use visible strings.

BUG: 506513
FIXED-IN: 6.6.0